# python-adguardhome

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yaml  issue.yaml
.github/workflows/: ci.yml  codeql.yaml  dependency-review.yaml  dependency-review.yml  labels.yaml  linting.yaml  lock.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  requirements.txt  scorecard.yml  stale.yaml  tests.yaml  typing.yaml
adguardhome/: __init__.py  __version__.py  adguardhome.py  client.py  exceptions.py  filtering.py  parental.py  querylog.py  rewrite.py  safebrowsing.py  safesearch.py  stats.py
adguardhome/types/: check_host.py
adguardhome/types/filtering/: __init__.py  check_host.py  status.py
adguardhome/types/stats/: __init__.py  all_stats.py
examples/: clientcontrol.py  control.py  stats.py  status.py
src/adguardhome/: __init__.py  adguardhome.py  blocked_services.py  client.py  clients.py  exceptions.py  filtering.py  parental.py  querylog.py  rewrite.py  safebrowsing.py  safesearch.py  stats.py  update.py
tests/: __init__.py  conftest.py  test_adguardhome.py  test_blocked_services.py  test_client.py  test_filtering.py  test_parental.py  test_querylog.py  test_rewrite.py  test_safebrowsing.py  test_safesearch.py  test_stats.py  test_update.py
tests/__snapshots__/: test_client.ambr  test_rewrite.ambr  test_update.ambr
tests/fixtures/: clients.json  rewrite_list.json  stats.json  update_available.json
tests/responses/blocked_services/: all.json
