[tool.poetry]
name = "adguardhome"
version = "0.0.0"
description = "Asynchronous Python client for the AdGuard Home API."
authors = ["Franck Nijhof <opensource@frenck.dev>"]
maintainers = ["Franck Nijhof <opensource@frenck.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/frenck/python-adguardhome"
repository = "https://github.com/frenck/python-adguardhome"
documentation = "https://github.com/frenck/python-adguardhome"
keywords = ["adguard home", "adguard", "api", "async", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "adguardhome", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.0.0"
yarl = ">=1.6.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.6"
black = "^22.12"
blacken-docs = "^1.12.1"
coverage = {version = "^7.0", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.4.0"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
yamllint = "^1.28.0"
pyupgrade = "^3.3.1"
flake8-simplify = "^0.19.3"
vulture = "^2.6"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^2.3.5"
codespell = "^2.2.2"
bandit = "^1.7.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/frenck/python-adguardhome/issues"
Changelog = "https://github.com/frenck/python-adguardhome/releases"

[tool.black]
target-version = ['py37']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["adguardhome"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MASTER]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "format",
    "unsubscriptable-object",
    "duplicate-code",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
