[project]
name = "adguardhome"
version = "0.0.0"
description = "Asynchronous Python client for the AdGuard Home API."
authors = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
maintainers = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["adguard home", "adguard", "api", "async", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [{ include = "adguardhome", from = "src" }]
dependencies = ['aiohttp (>=3.0.0)', 'yarl (>=1.6.0)']

[tool.poetry]
requires-poetry = '>=2.0'


[project.urls]
homepage = "https://github.com/frenck/python-adguardhome"
repository = "https://github.com/frenck/python-adguardhome"
documentation = "https://github.com/frenck/python-adguardhome"
"Bug Tracker" = "https://github.com/frenck/python-adguardhome/issues"
Changelog = "https://github.com/frenck/python-adguardhome/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = { version = "7.13.4", extras = ["toml"] }
ty = "0.0.19"
pre-commit-hooks = "6.0.0"
prek = "0.3.4"
pylint = "4.0.5"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
ruff = "0.15.4"
safety = "3.7.0"
syrupy = "5.1.0"
yamllint = "1.38.0"
zizmor = "1.22.0"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["adguardhome"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.ty.environment]
python-version = "3.11"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = ["duplicate-code", "format", "unsubscriptable-object"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # Opinioated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["adguardhome"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "mashumaro.mixins.orjson.DataClassORJSONMixin",
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
